# ham-photos

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  start.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 20260616000001_create_photos.sql  20260618000002_create_site_settings.sql  20260618000003_add_site_intro.sql  20260619000004_create_admin_users_and_app_config.sql  20260619000005_add_site_favicon_url.sql  20260620000006_update_default_site_brand.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/handlers/: admin.rs  images.rs  init.rs  mod.rs  photos.rs  settings.rs  upload.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  photo.rs  settings.rs
backend/src/services/: auth.rs  cloudflare.rs  mod.rs  site_config.rs
config/: site.json
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  components.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  photos.ts
frontend/src/components/Admin/: UploadForm.tsx
frontend/src/components/Gallery/: FilterBar.tsx  (+2 more)
frontend/src/config/: site.ts
frontend/src/hooks/: usePhotos.ts  useSettings.ts  useSiteFavicon.ts  useSiteMetadata.ts
frontend/src/pages/: Admin.tsx  Gallery.tsx  Init.tsx  Login.tsx  PhotoDetail.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: api.ts  photo.ts  settings.ts  site-config.d.ts
frontend/src/utils/: cloudflare.ts
(+2 files in other folders)
